# 2D-3D-something

./: .gitignore  CMakeLists.txt
src/: colour.cpp  colour.hpp  matrix.hpp  matrix_vram.hpp  opencl_wrapper.cpp  opencl_wrapper.hpp  polygon2d.hpp  pose2d.cpp  pose2d.hpp  sdl_wrapper.cpp  sdl_wrapper.hpp  sdlwrapper.cpp  sdlwrapper.hpp  triangle2d.cpp  triangle2d.hpp  vec2d.cpp  vec2d.hpp  vec2d_vram.hpp
tests/: test_cl.cpp  test_gaus.cpp  test_gaus2.cpp  test_general.cpp  test_matrix.cpp  test_sdlwrapper.cpp  test_sdlwrapper2.cpp  test_vec2d.cpp
